set max height for visualizer relative to viewport  * prevents overflow on desktop

--- a/css/coffee.css
+++ b/css/coffee.css
@@ -40,6 +40,7 @@ body {
     width: 100%;
     z-index: -1;
     opacity: 0.5;
+    max-height: 55vh;
 }
 
 [v-cloak]{
